--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/edge": "^1.1.2",
+    "@vercel/node": "^3.2.23",
     "bootstrap": "^5.3.1",
     "codemirror": "^5.65.15",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "socket.io-client": "^4.7.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
