--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,15 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
+ "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "dev": "env-cmd -f .env.development react-scripts start",
+    "prod": "env-cmd -f .env react-scripts start",
+    "vercel-build": "npm run build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
