--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
- "scripts": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,7 +30,7 @@
     "dev": "env-cmd -f .env.development react-scripts start",
     "prod": "env-cmd -f .env react-scripts start",
     "vercel-build": "npm run build"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
